# windows-11-debloat

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.manifest
.github/workflows/: build.yml  release.yml
src/: AppxManager.cpp  AppxManager.h  HostsManager.cpp  HostsManager.h  PerformanceManager.cpp  PerformanceManager.h  ScheduledTaskManager.cpp  ScheduledTaskManager.h  ServiceManager.cpp  ServiceManager.h  TelemetryManager.cpp  TelemetryManager.h  Utils.cpp  Utils.h  main.cpp
tests/: test_datatables.cpp
